--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href="assets\Illustration\blooming-love.png" target="_blank"><img src="assets\Illustration\blooming-love.png"></a>
     <a href="assets\Illustration\color-me-impressed.png" target="_blank"><img src="assets\Illustration\color-me-impressed.png"></a>
     <a href="assets\Illustration\its-just-a-prank-bro.png" target="_blank"><img src="assets\Illustration\its-just-a-prank-bro.png"></a>
-    <a href="assets\Illustration\a-problem-has-been-detected.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png">
+    <a href="assets\Illustration\a-problem-has-been-detected.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png"></a>
     <a href="assets\Illustration\waddle-ball.png" target="_blank"><img src="assets\Illustration\waddle-ball.png"></a>
 </div>
 
