--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 <div class="gallery tshirts">
     <h2>Daily Tees</h2>
     <p>The following designs were Daily Tees previously sold on <a href="https://theyetee.com/" target="_blank">TheYetee.com</a></p>
-    <a href="assets\Illustration\on-the-draw.png" target="_blank"><img src="assets\Illustration\on-the-draw.png"></a>
-    <a href="assets\Illustration\blooming-love.png" target="_blank"><img src="assets\Illustration\blooming-love.png"></a>
-    <a href="assets\Illustration\color-me-impressed.png" target="_blank"><img src="assets\Illustration\color-me-impressed.png"></a>
-    <a href="assets\Illustration\its-just-a-prank-bro.png" target="_blank"><img src="assets\Illustration\its-just-a-prank-bro.png"></a>
-    <a href="assets\Illustration\a-problem-has-been-detected.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png"></a>
-    <a href="assets\Illustration\waddle-ball.png" target="_blank"><img src="assets\Illustration\waddle-ball.png"></a>
+    <a href="assets\Illustration\high-quality\on-the-draw-high-quality.png" target="_blank"><img src="assets\Illustration\on-the-draw.png"></a>
+    <a href="assets\Illustration\high-quality\blooming-love-high-quality.png" target="_blank"><img src="assets\Illustration\blooming-love.png"></a>
+    <a href="assets\Illustration\high-quality\waddle-ball-high-quality.png" target="_blank"><img src="assets\Illustration\waddle-ball.png"></a>
+    <a href="assets\Illustration\high-quality\color-me-impressed-high-quality.png" target="_blank"><img src="assets\Illustration\color-me-impressed.png"></a>
+    <a href="assets/Illustration/high-quality/le-chat-gros-high-quality.png" target="_blank"><img src="assets/Illustration/le-chat-gros.png"></a>
+    <a href="assets\Illustration\high-quality\its-just-a-prank-bro-high-quality.png" target="_blank"><img src="assets\Illustration\its-just-a-prank-bro.png"></a>
+    <a href="assets\Illustration\high-quality\a-problem-has-been-detected-high-quality.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png">
+    <a href="assets/Illustration/high-quality/born-to-eat-high-quality.png" target="_blank"><img src="assets/Illustration/born-to-eat.png"></a>
 </div>
 
 
@@ -57,9 +59,10 @@
     <h2>Misc. Illustrations</h2>
     <p>Use the horizontal scrollbar to view all.</p>
     <div class="gallery misc">
-        <a href="assets\Illustration\sky-high.png" target="_blank"><img src="assets\Illustration\sky-high.png"></a>
-        <a href="assets\Illustration\kightmare-adventure.png" target="_blank"><img src="assets\Illustration\kightmare-adventure.png"></a>
-        <a href="assets\Illustration\fl0.png"><img src="assets\Illustration\fl0.png"></a>
+        <a href="assets/Illustration/high-quality/pokemon-tangela-tangrowth-high-quality.png" target="_blank"><img src="assets/Illustration/pokemon-tangela-tangrowth.png"></a>
+        <a href="assets\Illustration\high-quality\sky-high-high-quality.png" target="_blank"><img src="assets\Illustration\sky-high.png"></a>
+        <a href="assets\Illustration\high-quality\knightmare-adventure-high-quality.png" target="_blank"><img src="assets\Illustration\knightmare-adventure.png"></a>
+        <a href="assets\Illustration\high-quality\fl0-high-quality.png" target="_blank"><img src="assets\Illustration\fl0.png"></a>
     </div>
 </div>
 
