--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a href="assets\Illustration\high-quality\color-me-impressed-high-quality.png" target="_blank"><img src="assets\Illustration\color-me-impressed.png"></a>
     <a href="assets/Illustration/high-quality/le-chat-gros-high-quality.png" target="_blank"><img src="assets/Illustration/le-chat-gros.png"></a>
     <a href="assets\Illustration\high-quality\its-just-a-prank-bro-high-quality.png" target="_blank"><img src="assets\Illustration\its-just-a-prank-bro.png"></a>
-    <a href="assets\Illustration\high-quality\a-problem-has-been-detected-high-quality.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png">
+    <a href="assets\Illustration\high-quality\a-problem-has-been-detected-high-quality.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png"></a>
     <a href="assets/Illustration/high-quality/born-to-eat-high-quality.png" target="_blank"><img src="assets/Illustration/born-to-eat.png"></a>
 </div>
 
