--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h2>Misc. Illustrations</h2>
     <p>Use the horizontal scrollbar to view all.</p>
     <div class="gallery misc">
-        <a href="assets/Illustration/high-quality/pokemon-tangela-tangrowth-high-quality.png" target="_blank"><img src="assets/Illustration/pokemon-tangela-tangrowth.png"></a>
+        <a href="assets\Illustration\high-quality\pokemon-tangela-tangrowth-high-quality.png" target="_blank"><img src="assets\Illustration\pokemon-tangela-tangrowth.png"></a>
         <a href="assets\Illustration\high-quality\sky-high-high-quality.png" target="_blank"><img src="assets\Illustration\sky-high.png"></a>
         <a href="assets\Illustration\high-quality\knightmare-adventure-high-quality.png" target="_blank"><img src="assets\Illustration\knightmare-adventure.png"></a>
         <a href="assets\Illustration\high-quality\fl0-high-quality.png" target="_blank"><img src="assets\Illustration\fl0.png"></a>
