--- a/about.html
+++ b/about.html
@@ -27,18 +27,18 @@
     
     <h1>About</h1>
     <div class="gallery">
-        <img class="round-image" src="assets/PFP2024.png" width="274">
+        <img class="round-image" src="assets/PFP2023.png" width="274">
         <div class="bio">
             <p>Marlene is a cartoonist and illustrator living in New York City. As an artist she works with a variety of different topics, usually resulting in pleasent but deep narratives. Her work has been featured by entities such as <b>The Yetee</b> and <b>Tapas Media</b>.</p>
             
             <p>She is a member of the <b>Scope of Work 2024 cohort</b> and <b>Cartoonist Cooperative</b>. She is open to exploring new opportunities in order to better improve her craft.</p>
 
-            <b><p><a href="https://ko-fi.com/marlenesantos" target="_blank">Ko-Fi</a> • <a href="https://twitter.com/M_SantosArt" target="_blank">Twitter</a> • <a href="https://bsky.app/profile/marlenesantos.bsky.social" target="_blank">Bluesky</a> • <a href="https://www.artfol.co/marlenesantos" target="_blank">Artfol</a> • <a href="https://www.inprnt.com/gallery/marlenesantos/" target="_blank">INPRNT</p></b></a>
+            <b><p><a href="https://ko-fi.com/marlenesantos" target="_blank">Ko-Fi</a> • <a href="https://twitter.com/M_SantosArt" target="_blank">Twitter</a> • <a href="https://bsky.app/profile/marlenesantos.bsky.social" target="_blank">Bluesky</a> • <a href="https://www.artfol.co/marlenesantos" target="_blank">Artfol</a> • <a href="https://www.inprnt.com/gallery/marlenesantos/" target="_blank">INPRNT</p></b>
         </div>
     </div>
 
     <footer>
-        <p>©2023 Marlene Santos</p>
+        <p>©2024 Marlene Santos</p>
     </footer>
 </body>
 </html>
