--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     </header>
 
     <h1>Contact</h1>
-    <p class="return">You can use this form to get in touch with Marlene. Feel free to send any questions, comments, opportunities, or concerns.</p>
+    <p class="return">You can use this form to get in touch with Marlene, or email her at <b>itsmarlenesantos[at]gmail[dot]com</b>. Feel free to send any questions, comments, opportunities, or concerns.</p>
 
     <script type="text/javascript" src="https://form.jotform.com/jsform/233427677245059"></script> <!--The contact form was made in Jotform, an online form builder. See assets/contact.css to see a copy of the CSS I had injected when customizing it.-->
 
