--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <div class="gallery merchandise">
     <h2>Merchandise</h2>
+    <a href="assets/Illustration/Merchandise/high-quality/copeandseethe.png" target="_blank"><img src="assets/Illustration/Merchandise/copeandseethe.png"></a>
+    <br>
     <a href="assets/Illustration/Merchandise/poppy-sticker.png" target="_blank"><img src="assets/Illustration/Merchandise/poppy-sticker.png" height="200px"></a>
     <a href="assets/Illustration/Merchandise/princess-sticker.png" target="_blank"><img src="assets/Illustration/Merchandise/princess-sticker.png" height="200px"></a>
     <a href="assets/Illustration/Merchandise/uptop-sticker.png" target="_blank"><img src="assets/Illustration/Merchandise/uptop-sticker.png" height="200px"></a>
