--- a/comics.html
+++ b/comics.html
@@ -27,51 +27,59 @@
 <div class="gallery">
     <div class="comics jumphero">
         <div class="left">
-            <img src="assets/Comics/jumphero-page.png" width="360px">
+            <img src="assets/Comics/jumphero-page.png">
         </div>
         <div class="right">
-            <img src="assets/Comics/jumphero-logo.png" width="400px">
+            <img src="assets/Comics/jumphero-logo.png">
             <p>JumpHero is a gaming webcomic about two heroes who have to save the princess...every other day! Follow the day-to-day adventures of Uptop and Downlow and all of their friends, and learn how they all got caught up in this strange and endless cycle. Will they ever stop the bad guy once and for all?</p>
             <a href="https://jumpherocomic.com/" target="_blank"><button>Click to Read</button></a>
         </div>
     </div>
 
+    <div class="comics bun-head">
+        <div class="left">
+            <img src="assets/Comics/bun-head-logo.png">
+            <p>A gag-a-day style mini comic<br>about mental illness.</p>
+            <a href="https://ko-fi.com/s/a8517ae21a" target="_blank"><button>Click to Buy</button></a>
+
+        </div>
+        <div class="right">
+            <img src="assets/Comics/bun-head-page.png">
+        </div>
+    </div>
     <div class="comics the-rite-of-passage">
         <div class="left">
+            <img src="assets/Comics/rite-of-passage-page.png">
+        </div>
+        <div class="right">
             <h2>The Rite of Passage</h2>
             <h3>created for <i>The Comic Con Survival Guide: A CoCo Comics Anthology</i></h3>
             <p>A three page autobio comic about experiences researching conventions and preparing to table at one for the first time.</p>
             <a href="https://www.cococomics.co.uk/physicalcomics/p/the-comic-con-survival-guide" target="_blank"><button>Click to Buy</button></a>
         </div>
-
-        <div class="right">
-            <img src="assets/Comics/rite-of-passage-page.png" width="360px">
-        </div>
     </div>
 
     <div class="comics the-birthday-boy" id="the-birthday-boy">
         <div class="left">
-            <img src="assets/Comics/the-birthday-boy-page.png" width="360px">
-        </div>
-
-        <div class="right">
             <h2>The Birthday Boy</h2>
             <p>A 19-page Guilty Gear fan comic where Sol and Ky throw a birthday party for Sin.</p>
             <a href="the-birthday-boy.html"><button>Click to Read</button></a>
         </div>
+        <div class="right">
+            <img src="assets/Comics/the-birthday-boy-page.png">
+        </div>
     </div>
 
     <div class="comics" id="egdeer">
-
         <div class="left">
+            <img src="assets/Comics/egdeer-page.png">
+        </div>
+
+        <div class="right">
             <h2>EGDeer</h2>
             <h3>Created for the <a href="https://www.egdcollective.org/" target="_blank">EGD Collective</a></h3>
             <p>An official miniseries about EGD's mascot.</p>
             <a href="egdeer.html"><button>Click to Read</button></a>
-        </div>
-
-        <div class="right">
-            <img src="assets/Comics/egdeer-page.png" width="360px">
         </div>
     </div>
 
