--- a/comics.html
+++ b/comics.html
@@ -27,10 +27,10 @@
 <div class="gallery">
     <div class="comics jumphero">
         <div class="left">
-            <img src="assets/Comics/jumphero-page.png">
+            <img src="assets/Comics/jumphero-page.png" width="360px">
         </div>
         <div class="right">
-            <img src="assets/Comics/jumphero-logo.png">
+            <img src="assets/Comics/jumphero-logo.png" width="400px">
             <p>JumpHero is a gaming webcomic about two heroes who have to save the princess...every other day! Follow the day-to-day adventures of Uptop and Downlow and all of their friends, and learn how they all got caught up in this strange and endless cycle. Will they ever stop the bad guy once and for all?</p>
             <a href="https://jumpherocomic.com/" target="_blank"><button>Click to Read</button></a>
         </div>
@@ -38,7 +38,7 @@
 
     <div class="comics bun-head">
         <div class="left">
-            <img src="assets/Comics/bun-head-logo.png">
+            <img src="assets/Comics/bun-head-logo.png" width="400px">
             <p>A gag-a-day style mini comic<br>about mental illness.</p>
             <a href="https://ko-fi.com/s/a8517ae21a" target="_blank"><button>Click to Buy</button></a>
 
@@ -49,7 +49,7 @@
     </div>
     <div class="comics the-rite-of-passage">
         <div class="left">
-            <img src="assets/Comics/rite-of-passage-page.png">
+            <img src="assets/Comics/rite-of-passage-page.png" width="360px">
         </div>
         <div class="right">
             <h2>The Rite of Passage</h2>
@@ -66,13 +66,13 @@
             <a href="the-birthday-boy.html"><button>Click to Read</button></a>
         </div>
         <div class="right">
-            <img src="assets/Comics/the-birthday-boy-page.png">
+            <img src="assets/Comics/the-birthday-boy-page.png" width="360px">
         </div>
     </div>
 
     <div class="comics" id="egdeer">
         <div class="left">
-            <img src="assets/Comics/egdeer-page.png">
+            <img src="assets/Comics/egdeer-page.png" width="360px">
         </div>
 
         <div class="right">
