--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             
             <p>She is a member of the <b>Scope of Work 2024 cohort</b> and <b>Cartoonist Cooperative</b>. She is open to exploring new opportunities in order to better improve her craft.</p>
 
-            <b><p><a href="https://ko-fi.com/marlenesantos" target="_blank">Ko-Fi</a> • <a href="https://twitter.com/M_SantosArt" target="_blank">Twitter</a> • <a href="https://bsky.app/profile/marlenesantos.com" target="_blank">Bluesky</a> • <a href="https://www.artfol.co/marlenesantos" target="_blank">Artfol</a> • <a href="https://www.inprnt.com/gallery/marlenesantos/" target="_blank">INPRNT</p></b>
+            <b><p><a href="https://ko-fi.com/marlenesantos" target="_blank">Ko-Fi</a> • <a href="https://twitter.com/M_SantosArt" target="_blank">Twitter</a> • <a href="https://bsky.app/profile/marlenesantos.com" target="_blank">Bluesky</a> • <a href="https://www.artfol.co/marlenesantos" target="_blank">Artfol</a> • <a href="https://buttondown.email/marlenesantos/" target="_blank">Newsletter</p></b>
         </div>
     </div>
 
