--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://marlenesantos.com/"/>
 <meta property="og:description" content="Marlene is a cartoonist and illustrator living in New York City. As an artist she works with a variety of different topics, usually resulting in pleasent but deep narratives. Her work has been featured by entities such as The Yetee and Tapas Media."
-<meta property="og:image" content="assets\PFP2024.png"/>
+<meta property="og:image" content="https://marlenesantos.com/assets/PFP2024.png/>
 
 </head>
 <body>
