--- a/comics.html
+++ b/comics.html
@@ -30,7 +30,7 @@
             <img src="assets/Comics/jumphero-page.png" width="360px">
         </div>
         <div class="right">
-            <img src="assets/Comics/jumphero-logo.png" width="400px">
+            <img src="assets/Comics/jumphero-logo.png" alt="JumpHero" width="400px">
             <p>JumpHero is a gaming webcomic about two heroes who have to save the princess...every other day! Follow the day-to-day adventures of Uptop and Downlow and all of their friends, and learn how they all got caught up in this strange and endless cycle. Will they ever stop the bad guy once and for all?</p>
             <a href="https://jumpherocomic.com/" target="_blank"><button>Click to Read</button></a>
         </div>
@@ -38,7 +38,7 @@
 
     <div class="comics bun-head">
         <div class="left">
-            <img src="assets/Comics/bun-head-logo.png" width="400px">
+            <img src="assets/Comics/bun-head-logo.png" alt="Bun Head" width="400px">
             <p>A gag-a-day style mini comic<br>about mental illness.</p>
             <a href="https://ko-fi.com/s/a8517ae21a" target="_blank"><button>Click to Buy</button></a>
 
