--- a/comics.html
+++ b/comics.html
@@ -14,12 +14,7 @@
 </div>
 
 <div class="navigation">
-    <nav>
-        <a href="index.html">Illustration</a> |
-        <b>Comics</b> | 
-        <a href="about.html">About</a> | 
-        <a href="contact.html">Contact</a>
-    </nav>
+    <script src="js/navbox.js" defer></script>
 </div>
 <!--Must be on every page!-->
 
@@ -85,9 +80,9 @@
 
 </div>
 
-<footer>
-    <p>©2024 Marlene Santos</p>
-</footer>
+<div class="writeFooter">
+    <script src="js/footer.js" defer></script>
+</div>
 
 </body>
 </html>
