--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,7 @@
         </div>
     
         <div class="navigation">
-            <nav>
-                <a href="index.html">Illustration</a> | 
-                <a href="comics.html">Comics</a> | 
-                <a href="about.html">About</a> | 
-                <b>Contact</b>
-            </nav>
+            <script src="js/navbox.js" defer></script>
         </div>
     </header>
 
@@ -30,8 +25,8 @@
 
     <script type="text/javascript" src="https://form.jotform.com/jsform/233427677245059"></script> <!--The contact form was made in Jotform, an online form builder. See assets/contact.css to see a copy of the CSS I had injected when customizing it.-->
 
-    <footer>
-        <p>©2024 Marlene Santos</p>
-    </footer>
+    <div class="writeFooter">
+        <script src="js/footer.js" defer></script>
+    </div>
 </body>
 </html>
