--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://marlenesantos.com/"/>
 <meta property="og:description" content="Marlene is a cartoonist and illustrator living in New York City. As an artist she works with a variety of different topics, usually resulting in pleasent but deep narratives. Her work has been featured by entities such as The Yetee and Tapas Media.">
 <meta property="og:image" content="assets/PFP2024.png"/>
-    
+
 </head>
 <body>
 
@@ -24,12 +24,7 @@
     </div>
 
     <div class="navigation">
-        <nav>
-            <b>Illustration</b> | 
-            <a href="comics.html">Comics</a> | 
-            <a href="about.html">About</a> | 
-            <a href="contact.html">Contact</a>
-        </nav>
+        <script src="js/navbox.js" defer></script>
     </div>
 </header>
 <!--Must be on every page!-->
@@ -47,6 +42,8 @@
     <a href="assets\Illustration\high-quality\its-just-a-prank-bro-high-quality.png" target="_blank"><img src="assets\Illustration\its-just-a-prank-bro.png"></a>
     <a href="assets\Illustration\high-quality\a-problem-has-been-detected-high-quality.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png"></a>
     <a href="assets/Illustration/high-quality/born-to-eat-high-quality.png" target="_blank"><img src="assets/Illustration/born-to-eat.png"></a>
+    <a href="assets/Illustration/high-quality/laugh-and-pleasures-high-quality.png" target="_blank"><img src="assets/Illustration/laugh-and-pleasures.png"></a>
+    
 </div>
 
 
@@ -70,15 +67,16 @@
     <p>Use the horizontal scrollbar to view all.</p>
     <div class="gallery misc">
         <a href="assets/Illustration/high-quality/pokemon-tangela-tangrowth-high-quality.png" target="_blank"><img src="assets/Illustration/pokemon-tangela-tangrowth.png"></a>
+        <a href="assets/Illustration/high-quality/good-patient-high-quality.png" target="_blank"><img src="assets/Illustration/good-patient.png"></a>
         <a href="assets\Illustration\high-quality\sky-high-high-quality.png" target="_blank"><img src="assets\Illustration\sky-high.png"></a>
         <a href="assets\Illustration\high-quality\knightmare-adventure-high-quality.png" target="_blank"><img src="assets\Illustration\knightmare-adventure.png"></a>
         <a href="assets\Illustration\high-quality\fl0-high-quality.png" target="_blank"><img src="assets\Illustration\fl0.png"></a>
     </div>
 </div>
 
-<footer>
-    <p>©2024 Marlene Santos</p>
-</footer>
+<div class="writeFooter">
+    <script src="js/footer.js" defer></script>
+</div>
 
 </body>
 </html>
