--- a/egdeer.html
+++ b/egdeer.html
@@ -17,12 +17,7 @@
     </div>
 
     <div class="navigation">
-        <nav>
-            <a href="index.html">Illustration</a> | 
-            <a href="comics.html">Comics</a> | 
-            <a href="about.html">About</a> | 
-            <a href="contact.html">Contact</a>
-        </nav>
+        <script src="js/navbox.js" defer></script>
     </div>
 </header>
 <!--Must be on every page!-->
@@ -41,6 +36,8 @@
 
     </div>
 
-<footer>
-    <p>©2024 Marlene Santos</p>
-</footer>
+<div class="writeFooter">
+    <script src="js/footer.js" defer></script>
+</div>
+</body>
+</html>
