--- a/storyboards.html
+++ b/storyboards.html
@@ -20,6 +20,7 @@
 
 <h1>Storyboards</h1>
 <div class="gallery">
+    <p>Characters from Marlene's webcomic <i><a href="https://jumpherocomic.com/" target="_blank">JumpHero</a></i></p>
     <video width="736" height="414" controls>
         <source src="assets/videos/Animatic 2_1.mp4" type="video/mp4">
         Your browser does not support the video tag.
