--- a/index.html
+++ b/index.html
@@ -2,76 +2,87 @@
 <html>
 <head>
 <link rel="stylesheet" href="assets/style.css">
-<title>Marlene Santos | Illustration</title>
+<title>Marlene Santos | Comics</title>
 <!--Must be on every page!-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-
-<meta property="og:title" content="Marlene Santos"/>
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://marlenesantos.com/"/>
-<meta property="og:description" content="Marlene is a cartoonist and illustrator living in New York City. As an artist she works with a variety of different topics, usually resulting in pleasent but deep narratives. Her work has been featured by entities such as The Yetee and Tapas Media.">
-<meta property="og:image" content="assets/PFP2024.png"/>
-
 </head>
 <body>
+<div class="header">
+    <img src="assets/Logo.png" width="1004px">
+</div>
 
-<header>
-    <div class="header">
-        <img src="assets/Logo.png" width="1004px">
-    </div>
-
-    <div class="navigation">
-        <script src="js/navbox.js" defer></script>
-    </div>
-</header>
+<div class="navigation">
+    <script src="js/navbox.js" defer></script>
+</div>
 <!--Must be on every page!-->
 
-<h1>Illustration</h1>
-
-<div class="gallery tshirts">
-    <h2>Daily Tees</h2>
-    <p>The following designs were Daily Tees previously sold on <a href="https://theyetee.com/" target="_blank">TheYetee.com</a></p>
-    <a href="assets\Illustration\high-quality\on-the-draw-high-quality.png" target="_blank"><img src="assets\Illustration\on-the-draw.png"></a>
-    <a href="assets\Illustration\high-quality\blooming-love-high-quality.png" target="_blank"><img src="assets\Illustration\blooming-love.png"></a>
-    <a href="assets\Illustration\high-quality\waddle-ball-high-quality.png" target="_blank"><img src="assets\Illustration\waddle-ball.png"></a>
-    <a href="assets\Illustration\high-quality\color-me-impressed-high-quality.png" target="_blank"><img src="assets\Illustration\color-me-impressed.png"></a>
-    <a href="assets/Illustration/high-quality/le-chat-gros-high-quality.png" target="_blank"><img src="assets/Illustration/le-chat-gros.png"></a>
-    <a href="assets\Illustration\high-quality\its-just-a-prank-bro-high-quality.png" target="_blank"><img src="assets\Illustration\its-just-a-prank-bro.png"></a>
-    <a href="assets\Illustration\high-quality\a-problem-has-been-detected-high-quality.png" target="_blank"><img src="assets\Illustration\a-problem-has-been-detected.png"></a>
-    <a href="assets/Illustration/high-quality/born-to-eat-high-quality.png" target="_blank"><img src="assets/Illustration/born-to-eat.png"></a>
-    <a href="assets/Illustration/high-quality/laugh-and-pleasures-high-quality.png" target="_blank"><img src="assets/Illustration/laugh-and-pleasures.png"></a>
-    
-</div>
-
-
-<div class="gallery merchandise">
-    <h2>Merchandise</h2>
-    <a href="assets/Illustration/Merchandise/high-quality/copeandseethe.png" target="_blank"><img src="assets/Illustration/Merchandise/copeandseethe.png"></a>
-    <br>
-    <a href="assets/Illustration/Merchandise/poppy-sticker.png" target="_blank"><img src="assets/Illustration/Merchandise/poppy-sticker.png" height="200px"></a>
-    <a href="assets/Illustration/Merchandise/princess-sticker.png" target="_blank"><img src="assets/Illustration/Merchandise/princess-sticker.png" height="200px"></a>
-    <a href="assets/Illustration/Merchandise/uptop-sticker.png" target="_blank"><img src="assets/Illustration/Merchandise/uptop-sticker.png" height="200px"></a>
-    <a href="assets/Illustration/Merchandise/stickers-photo.jpg" target="_blank"><img src="assets/Illustration/Merchandise/stickers-photo.jpg" height="200px"></a>
-    <br>
-    <a href="assets/Illustration/Merchandise/little-shadows-shirt.png" target="_blank"><img src="assets/Illustration/Merchandise/little-shadows-shirt.png" height="200px"></a>
-    
-    <a href="assets/Illustration/Merchandise/little-shadows-shirt-mockup.png" target="_blank"><img src="assets/Illustration/Merchandise/little-shadows-shirt-mockup.png" height="200px"></a>
-</div>
-
-
-<div class="gallery misc-main">
-    <h2>Misc. Illustrations</h2>
-    <p>Use the horizontal scrollbar to view all.</p>
-    <div class="gallery misc">
-        <a href="assets/Illustration/high-quality/pokemon-tangela-tangrowth-high-quality.png" target="_blank"><img src="assets/Illustration/pokemon-tangela-tangrowth.png"></a>
-        <a href="assets/Illustration/high-quality/good-patient-high-quality.png" target="_blank"><img src="assets/Illustration/good-patient.png"></a>
-        <a href="assets\Illustration\high-quality\sky-high-high-quality.png" target="_blank"><img src="assets\Illustration\sky-high.png"></a>
-        <a href="assets\Illustration\high-quality\knightmare-adventure-high-quality.png" target="_blank"><img src="assets\Illustration\knightmare-adventure.png"></a>
-        <a href="assets\Illustration\high-quality\fl0-high-quality.png" target="_blank"><img src="assets\Illustration\fl0.png"></a>
+<h1>Comics</h1>
+<div class="gallery">
+    <div class="comics jumphero">
+        <div class="left">
+            <img src="assets/Comics/jumphero-page.png" width="360px">
+        </div>
+        <div class="right">
+            <img src="assets/Comics/jumphero-logo.png" alt="JumpHero" width="400px">
+            <p>2021-present</p>
+            <p>JumpHero is a gaming webcomic about two heroes who have to save the princess...every other day! Follow the day-to-day adventures of Uptop and Downlow and all of their friends, and learn how they all got caught up in this strange and endless cycle. Will they ever stop the bad guy once and for all?</p>
+            <a href="https://jumpherocomic.com/" target="_blank"><button>Click to Read</button></a>
+        </div>
     </div>
+
+    <div class="comics bun-head">
+        <div class="left">
+            <img src="assets/Comics/bun-head-logo.png" alt="Bun Head" width="400px">
+            <p>2024</p>
+            <p>A gag-a-day style mini comic<br>about mental illness.</p>
+            <a href="https://ko-fi.com/s/a8517ae21a" target="_blank"><button>Click to Buy</button></a>
+
+        </div>
+        <div class="right">
+            <img src="assets/Comics/bun-head-page.png">
+        </div>
+    </div>
+    <div class="comics the-rite-of-passage">
+        <div class="left">
+            <img src="assets/Comics/rite-of-passage-page.png" width="360px">
+        </div>
+        <div class="right">
+            <h2>The Rite of Passage</h2>
+            <p>2023</p>
+            <h3>created for <i>The Comic Con Survival Guide: A CoCo Comics Anthology</i></h3>
+            <p>A three page autobio comic about experiences researching conventions and preparing to table at one for the first time.</p>
+            <a href="https://www.cococomics.co.uk/physicalcomics/p/the-comic-con-survival-guide" target="_blank"><button>Click to Buy</button></a>
+        </div>
+    </div>
+
+    <div class="comics the-birthday-boy" id="the-birthday-boy">
+        <div class="left">
+            <h2>The Birthday Boy</h2>
+            <p>2023</p>
+            <p>A 19-page Guilty Gear fan comic where Sol and Ky throw a birthday party for Sin.</p>
+            <a href="the-birthday-boy.html"><button>Click to Read</button></a>
+        </div>
+        <div class="right">
+            <img src="assets/Comics/the-birthday-boy-page.png" width="360px">
+        </div>
+    </div>
+
+    <div class="comics" id="egdeer">
+        <div class="left">
+            <img src="assets/Comics/egdeer-page.png" width="360px">
+        </div>
+
+        <div class="right">
+            <h2>EGDeer</h2>
+            <p>2022</p>
+            <h3>Created for the <a href="https://www.egdcollective.org/" target="_blank">EGD Collective</a></h3>
+            <p>An official miniseries about EGD's mascot.</p>
+            <a href="egdeer.html"><button>Click to Read</button></a>
+        </div>
+    </div>
+
 </div>
 
 <div class="writeFooter">
