--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+<meta property="og:title" content="Marlene Santos"/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://marlenesantos.com/"/>
+<meta property="og:description" content="Marlene is a cartoonist in New York City.">
+<meta property="og:image" content="https://marlenesantos.com/assets/PFP2024.png/>
+
 </head>
 <body>
 <div class="header">
