--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             <p>She is a member of the <a href="https://www.scopeofwork.co/" target="_blank"><b>Scope of Work 2024 cohort</b></a> and the <a href="https://cartoonist.coop/" target="_blank"><b>Cartoonist Cooperative</b></a>.</p>
 
             <p><b>Stay in Touch!</b><br>
-            <a href="https://ko-fi.com/marlenesantos" target="_blank">Ko-Fi</a> • <a href="https://twitter.com/M_SantosArt" target="_blank">Twitter</a> • <a href="https://bsky.app/profile/marlenesantos.com" target="_blank">Bluesky</a> • <a href="https://www.artfol.co/marlenesantos" target="_blank">Artfol</a> • <a href="https://buttondown.email/marlenesantos/" target="_blank">Newsletter</a><br>
+            <a href="https://ko-fi.com/marlenesantos" target="_blank">Ko-Fi</a> • <a href="https://twitter.com/M_SantosArt" target="_blank">Twitter</a> • <a href="https://bsky.app/profile/marlenesantos.com" target="_blank">Bluesky</a> • <a href="https://www.artfol.co/marlenesantos" target="_blank">Artfol</a> • <a href="https://www.instagram.com/itsmarlenesantos/" target="_blank">Instagram</a> • <a href="https://buttondown.email/marlenesantos/" target="_blank">Newsletter</a><br>
             
             itsmarlenesantos[at]gmail[dot]com</p>
         </div>
