--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://marlenesantos.com/"/>
 <meta property="og:description" content="Marlene is a cartoonist in New York City.">
-<meta property="og:image" content="https://marlenesantos.com/assets/PFP2024.png/>
+<meta property="og:image" content="https://marlenesantos.com/assets/PFP2024.png/">
 
 </head>
 <body>
