--- a/storyboards.html
+++ b/storyboards.html
@@ -20,6 +20,14 @@
 
 <h1>Storyboards</h1>
 <div class="gallery">
+    <h3>From <a href="https://youtu.be/EcLPQM9Mwj4?si=rhk8i2ZI2aZSbrcQ" target="_blank">"Dog With OCD and Psychic Powers Too" </a></h3>
+    <video width="736" height="414" controls>
+        <source src="assets/videos/DWO_Storyboard.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <hr>
+
     <p>Characters from Marlene's webcomic <i><a href="https://jumpherocomic.com/" target="_blank">JumpHero</a></i></p>
     <video width="736" height="414" controls>
         <source src="assets/videos/Animatic 2_1.mp4" type="video/mp4">
