--- a/about.html
+++ b/about.html
@@ -24,13 +24,7 @@
     <div class="gallery">
         <div class="bio">
             <img class="round-image" src="assets/PFP2024.png" width="200">
-            <p>Marlene is a cartoonist in New York City. She loves creating vibrant art typically depicting non-human and abstract characters. Her use of colors and design makes her work expressive and approachable, and she believes that through making characters that don’t necessarily look like anyone, her art can resonate with almost everyone.
-
-            <p>Marlene is most interested in working in <b>storyboarding</b> and <b>animation</b>, and is also willing to do:
-            <br>Comic art
-            <br>Illustration
-            <br>Product Design
-            <br>Graphic Design
+            <p>Marlene is a cartoonist in New York City. She loves creating vibrant art typically depicting non-human and abstract characters. Her use of colors and design makes her work expressive and approachable, and she believes that through making characters that don’t necessarily look like anyone, her art can resonate with almost everyone. Marlene is most interested in working in <b>storyboarding</b> and <b>animation</b>
             </p>
             
             <p>She is a member of the <a href="https://www.scopeofwork.co/" target="_blank"><b>Scope of Work 2024 cohort</b></a> and the <a href="https://cartoonist.coop/" target="_blank"><b>Cartoonist Cooperative</b></a>.</p>
