--- a/storyboards.html
+++ b/storyboards.html
@@ -20,7 +20,7 @@
 
 <h1>Storyboards</h1>
 <div class="gallery">
-    <h3>From <a href="https://youtu.be/EcLPQM9Mwj4?si=rhk8i2ZI2aZSbrcQ" target="_blank">"Dog With OCD and Psychic Powers Too" </a></h3>
+    <h3>From <a href="https://youtu.be/epTPGjGr5Dc?si=OzJbB2qxOakACwBk" target="_blank">"Dog With OCD and Psychic Powers Too" </a></h3>
     <video width="736" height="414" controls>
         <source src="assets/videos/DWO_Storyboard.mp4" type="video/mp4">
         Your browser does not support the video tag.
