--- a/about.html
+++ b/about.html
@@ -30,8 +30,7 @@
             <p>She is a member of the <a href="https://www.scopeofwork.co/" target="_blank"><b>Scope of Work 2024 cohort</b></a> and the <a href="https://cartoonist.coop/" target="_blank"><b>Cartoonist Cooperative</b></a>.</p>
 
             <p><b>Stay in Touch!</b><br>
-            <a href="https://ko-fi.com/marlenesantos" target="_blank">Ko-Fi</a> • <a href="https://twitter.com/M_SantosArt" target="_blank">Twitter</a> • <a href="https://bsky.app/profile/marlenesantos.com" target="_blank">Bluesky</a> • <a href="https://www.artfol.co/marlenesantos" target="_blank">Artfol</a> • <a href="https://www.instagram.com/itsmarlenesantos/" target="_blank">Instagram</a> • <a href="https://buttondown.email/marlenesantos/" target="_blank">Newsletter</a><br>
-            
+                <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/marlenesantos.com">Bluesky</a> • <a target="_blank" rel="noopener noreferrer" href="https://cara.app/marlenesantos">Cara</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/itsmarlenesantos/">Instagram</a> • <a target="_blank" rel="noopener noreferrer" href="https://ko-fi.com/marlenesantos">Ko-Fi</a> • <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/M_SantosArt">Twitter</a> • &nbsp;<a target="_blank" rel="noopener noreferrer" href="https://buttondown.email/marlenesantos/">Newsletter</a><br></p>
             itsmarlenesantos[at]gmail[dot]com</p>
         </div>
     </div>
