--- a/storyboards.html
+++ b/storyboards.html
@@ -20,7 +20,7 @@
 
 <h1>Storyboards</h1>
 <div class="gallery">
-    <h3>From <a href="https://youtu.be/epTPGjGr5Dc?si=OzJbB2qxOakACwBk" target="_blank">"Dog With OCD and Psychic Powers Too" </a></h3>
+    <h3><a href="https://youtu.be/epTPGjGr5Dc?si=OzJbB2qxOakACwBk" target="_blank">"Dog With OCD and Psychic Powers Too" </a></h3>
     <video width="736" height="414" controls>
         <source src="assets/videos/DWO_Storyboard.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -28,7 +28,14 @@
 
     <hr>
 
-    <p>Characters from Marlene's webcomic <i><a href="https://jumpherocomic.com/" target="_blank">JumpHero</a></i></p>
+    <h3><a href="https://youtu.be/ctT6G9_NuB4?si=vx7Dv1RTmbGJIGC6" target="_blank">" Princess Transformation"</a></h3>
+    <video width="736" height="414" controls>
+        <source src="assets/videos/princess_storyboard.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <hr>
+
+    <p>Based on Marlene's webcomic <i><a href="https://jumpherocomic.com/" target="_blank">JumpHero</a></i></p>
     <video width="736" height="414" controls>
         <source src="assets/videos/Animatic 2_1.mp4" type="video/mp4">
         Your browser does not support the video tag.
