--- a/index.html
+++ b/index.html
@@ -2,17 +2,60 @@
 <html>
 <head>
 <link rel="stylesheet" href="assets/style.css">
-<title>Marlene Santos | Comics</title>
+<title>Marlene Santos</title>
 <!--Must be on every page!-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-<meta property="og:title" content="Marlene Santos"/>
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://marlenesantos.com/"/>
-<meta property="og:description" content="Marlene is a cartoonist in New York City.">
-<meta property="og:image" content="https://marlenesantos.com/assets/PFP2024.png/">
+<style>
+    .storyboardButton{
+        max-width: 887px;
+        height: 199px;
+        background: url("assets/landing-buttons/storyboard-button-main.png");
+        background-position: center;
+        background-size:100% auto;
+        background-repeat: no-repeat;
+        margin-left: 30px;
+        margin-top: 30px;
+    }
+
+    .storyboardButton:hover{
+        background-image: url("assets/landing-buttons/storyboard-button-hover.png");
+    }
+
+    .comicsButton{
+        max-width: 887px;
+        height: 199px;
+        background: url("assets/landing-buttons/comics-button-main.png");
+        background-position: center;
+        background-size:100% auto;
+        background-repeat: no-repeat;
+        margin-left: 30px;
+        margin-top: 30px;
+    }
+
+    .comicsButton:hover{
+        background-image: url("assets/landing-buttons/comics-button-hover.png");
+    }
+
+
+    .aboutButton{
+        max-width: 887px;
+        height: 199px;
+        background: url("assets/landing-buttons/about-button-main.png");
+        background-position: center;
+        background-size:100% auto;
+        background-repeat: no-repeat;
+        margin-left: 30px;
+        margin-top: 60px;
+    }
+
+    .aboutButton:hover{
+        background-image: url("assets/landing-buttons/about-button-hover.png");
+    }
+
+</style>
 
 </head>
 <body>
@@ -20,76 +63,13 @@
     <img src="assets/Logo.png" width="1004px">
 </div>
 
-<div class="navigation">
-    <script src="js/navbox.js" defer></script>
-</div>
 <!--Must be on every page!-->
 
-<h1>Comics</h1>
+<h1>Welcome!!</h1>
 <div class="gallery">
-    <div class="comics jumphero">
-        <div class="left">
-            <img src="assets/Comics/jumphero-page.png" width="360px">
-        </div>
-        <div class="right">
-            <img src="assets/Comics/jumphero-logo.png" alt="JumpHero" width="400px">
-            <p>2021-present</p>
-            <p>JumpHero is a gaming webcomic about two heroes who have to save the princess...every other day! Follow the day-to-day adventures of Uptop and Downlow and all of their friends, and learn how they all got caught up in this strange and endless cycle. Will they ever stop the bad guy once and for all?</p>
-            <a href="https://jumpherocomic.com/" target="_blank"><button>Click to Read</button></a>
-        </div>
-    </div>
-
-    <div class="comics bun-head">
-        <div class="left">
-            <img src="assets/Comics/bun-head-logo.png" alt="Bun Head" width="400px">
-            <p>2024</p>
-            <p>A gag-a-day style mini comic<br>about mental illness.</p>
-            <a href="https://ko-fi.com/s/a8517ae21a" target="_blank"><button>Click to Buy</button></a>
-
-        </div>
-        <div class="right">
-            <img src="assets/Comics/bun-head-page.png">
-        </div>
-    </div>
-    <div class="comics the-rite-of-passage">
-        <div class="left">
-            <img src="assets/Comics/rite-of-passage-page.png" width="360px">
-        </div>
-        <div class="right">
-            <h2>The Rite of Passage</h2>
-            <p>2023</p>
-            <h3>created for <i>The Comic Con Survival Guide: A CoCo Comics Anthology</i></h3>
-            <p>A three page autobio comic about experiences researching conventions and preparing to table at one for the first time.</p>
-            <a href="https://www.cococomics.co.uk/physicalcomics/p/the-comic-con-survival-guide" target="_blank"><button>Click to Buy</button></a>
-        </div>
-    </div>
-
-    <div class="comics the-birthday-boy" id="the-birthday-boy">
-        <div class="left">
-            <h2>The Birthday Boy</h2>
-            <p>2023</p>
-            <p>A 19-page Guilty Gear fan comic where Sol and Ky throw a birthday party for Sin.</p>
-            <a href="the-birthday-boy.html"><button>Click to Read</button></a>
-        </div>
-        <div class="right">
-            <img src="assets/Comics/the-birthday-boy-page.png" width="360px">
-        </div>
-    </div>
-
-    <div class="comics" id="egdeer">
-        <div class="left">
-            <img src="assets/Comics/egdeer-page.png" width="360px">
-        </div>
-
-        <div class="right">
-            <h2>EGDeer</h2>
-            <p>2022</p>
-            <h3>Created for the <a href="https://www.egdcollective.org/" target="_blank">EGD Collective</a></h3>
-            <p>An official miniseries about EGD's mascot.</p>
-            <a href="egdeer.html"><button>Click to Read</button></a>
-        </div>
-    </div>
-
+   <a href="storyboards.html"><div class="storyboardButton"></div></a>
+   <a href="comics.html"><div class="comicsButton"></div></a>
+   <a href="about.html"><div class="aboutButton"></div></a>
 </div>
 
 <div class="writeFooter">
