--- a/storyboards.html
+++ b/storyboards.html
@@ -10,47 +10,46 @@
 </head>
 <body>
 <div class="header">
-    <img src="assets/Logo.png" width="1004px">
+    <img src="assets/Logo.png" height="1004px">
 </div>
 
 <div class="navigation">
     <script src="js/navbox.js" defer></script>
 </div>
-<!--Must be on every page!-->
+<!--^above must be on every page!^-->
+
 
 <h1>Storyboards</h1>
-<div class="gallery">
-    <h3>Animatic for upcoming fan animation based on "Littlest Pet Shop - Meow Manor"</h3>
-    <video width="736" height="414" controls>
-        <source src="assets/videos/MM_Storyboard.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <h3>Animatic for  <a href="https://youtu.be/epTPGjGr5Dc?si=OzJbB2qxOakACwBk" target="_blank">"Dog With OCD and Psychic Powers Too" </a></h3>
-    <video width="736" height="414" controls>
-        <source src="assets/videos/DWO_Storyboard.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <hr>
-
-    <h3>Animatic for <a href="https://youtu.be/ctT6G9_NuB4?si=vx7Dv1RTmbGJIGC6" target="_blank">"Princess Transformation"</a></h3>
-    <video width="736" height="414" controls>
-        <source src="assets/videos/princess_storyboard.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-    <hr>
-
-    <p>Personal works based on Marlene's webcomic <i><a href="https://jumpherocomic.com/" target="_blank">JumpHero</a></i></p>
-    <video width="736" height="414" controls>
-        <source src="assets/videos/Animatic 2_1.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+<div class="gallery storyboards">
     
-    <video width="736" height="414" controls>
-        <source src="assets/videos/Poppin Letter Storyboard Final.mov" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <!--template
+
+     <div class="animatic">
+        [YouTube iframe goes here. Set width="400" height="225"]
+        <h2>TITLE GOES HERE!</h2>
+        <p><a href="PUT HERE THE LINK TO MORE INFO">See more about this short</a></p>
+    </div>
+
+    -->
+
+
+    <div class="animatic"> <!--Roar Extreme-->
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/AI24fAF-5gI?si=zGUrOJoLt-NF19Im" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2>Roar Extreme</h2>
+        <p><a href="roar-extreme.html">See more about this short</a></p>
+    </div>
+
+    <div class="animatic"> <!--Dog With OCD-->
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/BHY2uNz0U08?si=cl55zlwyokRu779G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></h2>
+        <h2>Dog With OCD and Psychic Powers Too</h2>
+        <p><a href="dog-with-ocd.html">See more about this short</a></p>
+    </div>
+
+    <div class="animatic"> <!--Princess Transformation-->
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/fN1hkuPaRv0?si=YvEVgSB1mmW28394" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2>Princess Transformation</h2>
+        <p><a href="princess-transformation.html">See more about this short</a></p>
+    </div>
 </div>
 
 <div class="writeFooter">
