--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="header">
-            <img src="assets/Logo.png" width="1004px">
+            <img src="assets/Logo.png" width="1004px" alt="Marlene Santos logo">
         </div>
     
         <div class="navigation">
