--- a/storyboards.html
+++ b/storyboards.html
@@ -45,11 +45,26 @@
         <p><a href="dog-with-ocd.html">See more about this short</a></p>
     </div>
 
+    <div class="animatic"> <!--Best of Luck-->
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/Q5FDKptdMZc?si=zVpIc74iOOFCyy9u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2>How "Best of Luck" Should Have Ended</h2>
+        <p><a href="best-of-luck.html">See more about this short</a></p>
+    </div>
+
+    <div class="animatic"> <!--Fairly Odd Morning-->
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/NImo88qNJY8?si=rvIp78TyhKGCgZc6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2>Fairly Odd Morning</h2>
+        <p><a href="fairly-odd-morning.html">See more about this short</a></p>
+    </div>
+
     <div class="animatic"> <!--Princess Transformation-->
         <iframe width="400" height="225" src="https://www.youtube.com/embed/fN1hkuPaRv0?si=YvEVgSB1mmW28394" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h2>Princess Transformation</h2>
         <p><a href="princess-transformation.html">See more about this short</a></p>
     </div>
+
+
+
 </div>
 
 <div class="writeFooter">
