--- a/about.html
+++ b/about.html
@@ -24,6 +24,9 @@
     <div class="gallery">
         <div class="bio">
             <img class="round-image" src="assets/PFP2024.png" width="200">
+            
+            <b><p><a href="Marlene-Santos-Resume.pdf">Click to download resume</a></p></b>
+
             <p>Marlene is a cartoonist in New York City. She loves creating vibrant art typically depicting non-human and abstract characters. Her use of colors and design makes her work expressive and approachable, and she believes that through making characters that don’t necessarily look like anyone, her art can resonate with almost everyone. Marlene is most interested in working in <b>storyboarding</b> and <b>animation</b>
             </p>
             
