--- a/index.html
+++ b/index.html
@@ -2,74 +2,38 @@
 <html>
 <head>
 <link rel="stylesheet" href="assets/style.css">
-<title>Marlene Santos</title>
+<title>Marlene Santos | Storyboards</title>
 <!--Must be on every page!-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
-<style>
-    .storyboardButton{
-        max-width: 887px;
-        height: 199px;
-        background: url("assets/landing-buttons/storyboard-button-main.png");
-        background-position: center;
-        background-size:100% auto;
-        background-repeat: no-repeat;
-        margin-left: 30px;
-        margin-top: 30px;
-    }
-
-    .storyboardButton:hover{
-        background-image: url("assets/landing-buttons/storyboard-button-hover.png");
-    }
-
-    .comicsButton{
-        max-width: 887px;
-        height: 199px;
-        background: url("assets/landing-buttons/comics-button-main.png");
-        background-position: center;
-        background-size:100% auto;
-        background-repeat: no-repeat;
-        margin-left: 30px;
-        margin-top: 30px;
-    }
-
-    .comicsButton:hover{
-        background-image: url("assets/landing-buttons/comics-button-hover.png");
-    }
-
-
-    .aboutButton{
-        max-width: 887px;
-        height: 199px;
-        background: url("assets/landing-buttons/about-button-main.png");
-        background-position: center;
-        background-size:100% auto;
-        background-repeat: no-repeat;
-        margin-left: 30px;
-        margin-top: 60px;
-    }
-
-    .aboutButton:hover{
-        background-image: url("assets/landing-buttons/about-button-hover.png");
-    }
-
-</style>
-
 </head>
 <body>
 <div class="header">
-    <img src="assets/Logo.png" width="1004px">
+    <img src="assets/Logo.png" height="1004px">
 </div>
 
-<!--Must be on every page!-->
+<div class="navigation">
+    <script src="js/navbox.js" defer></script>
+</div>
+<!--^above must be on every page!^-->
 
-<h1>Welcome!!</h1>
-<div class="gallery">
-   <a href="storyboards.html"><div class="storyboardButton"></div></a>
-   <a href="comics.html"><div class="comicsButton"></div></a>
-   <a href="about.html"><div class="aboutButton"></div></a>
+
+<h1>Storyboards</h1>
+<div class="gallery storyboards">
+   
+    <h2>currently untitled project</h2>
+    <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/d6bbf9b806ba4206bc357019962ba404" title="Storyboards for an upcoming project" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
+
+<hr>
+    <h2>Roar Extreme</h2>
+    <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/5bff460649694587b441f832647ec615" title="Roar Extreme [Storyboard]" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
+
+<hr>
+    <h2>Dog With OCD and Psychic Powers Too</h2>
+    <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 322;" frameborder="0" src="https://speakerdeck.com/player/a41f04525f3940698b4911c835cc42f8" title="Dog With OCD and Psychic Powers Too [Storyboard]" allowfullscreen="true" data-ratio="1.7391304347826086"></iframe>
+<hr>
+
 </div>
 
 <div class="writeFooter">
