--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
 <h1>Storyboards</h1>
 <div class="gallery storyboards">
    
-    <h2>currently untitled project</h2>
+    <h2>A Little Too Weird</h2>
+    <p>A werewolf kid struggles to make friends.</p>
     <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/d6bbf9b806ba4206bc357019962ba404" title="Storyboards for an upcoming project" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
 <hr>
     <h2>Roar Extreme</h2>
+    <p>A dinosaur wants to win a skateboarding contest.</p>
     <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/5bff460649694587b441f832647ec615" title="Roar Extreme [Storyboard]" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
 <hr>
     <h2>Dog With OCD and Psychic Powers Too</h2>
+    <p>Dog is scared of doing the unthinkable.</p>
     <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 322;" frameborder="0" src="https://speakerdeck.com/player/a41f04525f3940698b4911c835cc42f8" title="Dog With OCD and Psychic Powers Too [Storyboard]" allowfullscreen="true" data-ratio="1.7391304347826086"></iframe>
 <hr>
 
