--- a/comics.html
+++ b/comics.html
@@ -3,16 +3,14 @@
 <head>
 <link rel="stylesheet" href="assets/style.css">
 <title>Marlene Santos | Comics</title>
+<meta property="og:title" content="Marlene Santos | Comics"/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://marlenesantos.com/"/>
+
 <!--Must be on every page!-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
-<meta property="og:title" content="Marlene Santos"/>
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://marlenesantos.com/"/>
-<meta property="og:description" content="Marlene is a cartoonist in New York City.">
-<meta property="og:image" content="https://marlenesantos.com/assets/PFP2024.png/">
 
 </head>
 <body>
@@ -60,7 +58,7 @@
             <p>2023</p>
             <h3>created for <i>The Comic Con Survival Guide: A CoCo Comics Anthology</i></h3>
             <p>A three page autobio comic about experiences researching conventions and preparing to table at one for the first time.</p>
-            <a href="https://www.cococomics.co.uk/physicalcomics/p/the-comic-con-survival-guide" target="_blank"><button>Click to Buy</button></a>
+            <a href="https://cococomics.bigcartel.com/product/the-comic-con-survival-guide-anthology" target="_blank"><button>Click to Buy</button></a>
         </div>
     </div>
 
