--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
     <h2>Weird Kids</h2>
     <p>A werewolf kid struggles to make friends.</p>
     <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/d6bbf9b806ba4206bc357019962ba404" title="Storyboards for an upcoming project" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
-
+<hr>
+    <h2>My Little Friend</h2>
+    <p>A story about living with a strange creature.</p>
+    <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/6e2287ec7f354c7ba4cb2800d9c30a08" title="My Little Friend [Storyboard]" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 <hr>
     <h2>Mental Illness Gun</h2>
-    <p>Someone has created a new type of self-defense weapon</p>
+    <p>Someone has created a new type of self-defense weapon.</p>
     <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/b3acba9c1dee414e95166a16f7133d8f" title="Mental Illness Gun [Storyboard]" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
 <hr>
